syntax = "proto2";

package filesystem;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/filesystem/config";

////////////////////////////////////////////////////////////////////////////////

message FilesystemConfig {
    optional uint32 DefaultBlockSize = 1 [default = 4096];
    optional uint64 DefaultBlocksCount = 2;
    optional string DeletedFilesystemExpirationTimeout = 3 [default = "30m"];
    optional string ClearDeletedFilesystemsTaskScheduleInterval = 4 [default = "1m"];
    optional uint32 ClearDeletedFilesystemsLimit = 5 [default = 1000];
    optional string StorageFolder = 6 [default = "filesystems"];
}
